--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,18 @@
-# services:
-#   api:
-#     build:
-#       context: ./api
-#     ports:
-#       - "8000:8000"
-#   app:
-#     build:
-#       context: ./app
+services:
+
+  db:
+    image: "postgres:14.1-alpine"
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: x
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./sql/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile_API
+    ports:
+      - "8000:80"
