--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ matplotlib = "^3.5.1"
 seaborn = "^0.11.2"
 fastapi = "^0.70.1"
 uvicorn = "^0.16.0"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
@@ -70,6 +71,8 @@ good-names = [
   "df",
   "f",
   "c",
+  "conn",
+  "cur",
 ]
 
 [tool.pylint.messages_control]
