--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.11",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
