--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ seaborn = "^0.11.2"
 fastapi = "^0.70.1"
 uvicorn = "^0.16.0"
 psycopg2-binary = "^2.9.3"
+streamlit = "^1.3.1"
+streamlit-aggrid = "^0.2.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
@@ -98,7 +100,7 @@ no_implicit_reexport = true
 disallow_untyped_defs = true
 
 [[tool.mypy.overrides]]
-module = ["pandas"]
+module = ["pandas", "st_aggrid", "altair"]
 ignore_missing_imports = true
 
 # ========================================
